--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
 		"typescript": "^5.1.6",
 		"vite": "^4.3.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-static": "^2.0.2"
+	}
 }
