--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -3,6 +3,9 @@
 		"target": "esnext",
 		"module": "esnext",
 		"lib": ["esnext"],
-		"types": ["@cloudflare/workers-types"]
+		"types": ["@cloudflare/workers-types"],
+		"paths": {
+			"$keys/*": ["../keys/*"],
+		}
 	}
 }
