--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-static": "^2.0.2"
+		"@sveltejs/adapter-static": "^2.0.2",
+		"@types/peerjs": "^1.1.0",
+		"peerjs": "^1.4.7"
 	}
 }
