--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
+		"dev:worker": "node ./keys/keygen.js && wrangler pages dev -- npm run dev",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -31,7 +32,8 @@
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
 		"typescript": "^5.1.6",
-		"vite": "^4.3.0"
+		"vite": "^4.3.0",
+		"wrangler": "^3.17.1"
 	},
 	"type": "module",
 	"dependencies": {
