--- a/package.json
+++ b/package.json
@@ -1,44 +1,47 @@
 {
-	"name": "swindlestones",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev:worker": "node ./keys/keygen.js && wrangler pages dev -- npm run dev",
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
-	},
-	"devDependencies": {
-		"@cloudflare/workers-types": "^4.20230724.0",
-		"@floating-ui/dom": "^1.4.5",
-		"@skeletonlabs/skeleton": "^1.10.0",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte": "^2.26.0",
-		"postcss": "^8.4.27",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"tailwindcss": "^3.3.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.1.6",
-		"vite": "^4.3.0",
-		"wrangler": "^3.17.1"
-	},
-	"type": "module",
-	"dependencies": {
-		"@sveltejs/adapter-static": "^2.0.2",
-		"@types/peerjs": "^1.1.0",
-		"peerjs": "^1.4.7"
-	}
+  "name": "swindlestones",
+  "version": "0.0.2",
+  "private": true,
+  "scripts": {
+    "dev:worker": "node ./keys/keygen.js && wrangler pages dev -- npm run dev",
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "test": "vitest",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write ."
+  },
+  "devDependencies": {
+    "@cloudflare/workers-types": "^4.20231121.0",
+    "@skeletonlabs/skeleton": "2.5.1",
+    "@skeletonlabs/tw-plugin": "0.2.4",
+    "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/kit": "^1.27.4",
+    "@types/node": "20.10.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "autoprefixer": "10.4.16",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-svelte": "^2.30.0",
+    "postcss": "8.4.31",
+    "prettier": "^3.0.0",
+    "prettier-plugin-svelte": "^3.0.0",
+    "svelte": "^4.2.7",
+    "svelte-check": "^3.6.0",
+    "tailwindcss": "3.3.5",
+    "tslib": "^2.4.1",
+    "typescript": "^5.0.0",
+    "vite": "^4.4.2",
+    "vite-plugin-tailwind-purgecss": "0.1.3",
+    "vitest": "^0.34.0",
+    "wrangler": "^3.17.1"
+  },
+  "type": "module",
+  "dependencies": {
+    "@sveltejs/adapter-static": "^2.0.3",
+    "peerjs": "^1.5.1"
+  }
 }
