--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
 	"extends": "./.svelte-kit/tsconfig.json",
-	"exclude": ["functions/**/*"],
 	"compilerOptions": {
 		"allowJs": true,
 		"checkJs": true,
@@ -9,7 +8,8 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"sourceMap": true,
-		"strict": true
+		"strict": true,
+		"moduleResolution": "bundler"
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
