--- a/durable_objects/package.json
+++ b/durable_objects/package.json
@@ -5,13 +5,15 @@
   "description": "A template for kick starting a Cloudflare Workers project",
   "module": "./dist/index.mjs",
   "scripts": {
+    "dev": "wrangler dev",
     "build": "rollup -c",
-    "format": "prettier --write '**/*.{js,css,json,md}'"
+    "format": "prettier --write '**/*.{js,css,json,md}'",
+    "deploy": "wrangler deploy"
   },
   "author": "{{ authors }}",
   "license": "MIT",
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20221111",
+    "@cloudflare/workers-types": "^4.20231121.0",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.3.0",
@@ -25,6 +27,7 @@
     "rollup-plugin-copy": "^3.4.0",
     "ts-jest": "^29.0.5",
     "tslib": "^2.4.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "wrangler": "^3.17.1"
   }
 }
