--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "type": "module",
   "dependencies": {
     "@sveltejs/adapter-static": "^2.0.3",
-    "peerjs": "^1.5.1"
+    "peerjs": "^1.5.1",
+    "yup": "^1.4.0"
   }
 }
